@@ -2,8 +2,9 @@ import scoverage.ScoverageSbtPlugin.ScoverageKeys.coverageHighlighting
 
 lazy val buildSettings = Seq(
   organization := "com.geirsson",
-  version :=  org.scalafmt.Versions.nightly,
-  scalaVersion :=  "2.11.8",
+  // See core/src/main/scala/org/scalafmt/Versions.scala
+  version := org.scalafmt.Versions.nightly,
+  scalaVersion := org.scalafmt.Versions.scala,
   updateOptions := updateOptions.value.withCachedResolution(true),
   // Many useful rules are ignored, at least they're explicitly ignored.
   wartremoverWarnings in (Compile, compile) ++=
@@ -16,7 +17,6 @@ lazy val buildSettings = Seq(
 
       // TODO(olafur) remove after https://github.com/puffnfresh/wartremover/issues/188
       Wart.ExplicitImplicitTypes,
-
       Wart.Throw,
       Wart.NoNeedForMonad,
       Wart.FinalCaseClass,
@@ -28,9 +28,18 @@ lazy val buildSettings = Seq(
       Wart.DefaultArguments)
 )
 
+lazy val metaMacroSettings: Seq[Def.Setting[_]] = Seq(
+  libraryDependencies += "org.scalameta" %% "scalameta" % Deps.scalameta,
+  sources in (Compile,doc) := Nil,
+  addCompilerPlugin(
+    "org.scalameta" % "paradise" % "3.0.0-M5" cross CrossVersion.full),
+  scalacOptions += "-Xplugin-require:macroparadise"
+)
+
 lazy val compilerOptions = Seq(
   "-deprecation",
-  "-encoding", "UTF-8",
+  "-encoding",
+  "UTF-8",
   "-feature",
   "-language:existentials",
   "-language:higherKinds",
@@ -48,7 +57,7 @@ lazy val commonSettings = Seq(
   scalacOptions in (Compile, console) := compilerOptions :+ "-Yrepl-class-based",
   assemblyJarName in assembly := "scalafmt.jar",
   ScoverageSbtPlugin.ScoverageKeys.coverageExcludedPackages :=
-      ".*Debug;.*ScalaFmtLogger;.*Versions",
+    ".*Debug;.*ScalaFmtLogger;.*Versions",
   testOptions in Test += Tests.Argument("-oD")
 )
 
@@ -61,10 +70,11 @@ lazy val publishSettings = Seq(
     if (isSnapshot.value)
       Some("snapshots" at nexus + "content/repositories/snapshots")
     else
-      Some("releases"  at nexus + "service/local/staging/deploy/maven2")
+      Some("releases" at nexus + "service/local/staging/deploy/maven2")
   },
   publishArtifact in Test := false,
-  licenses := Seq("Apache-2.0" -> url("http://www.apache.org/licenses/LICENSE-2.0")),
+  licenses := Seq(
+    "Apache-2.0" -> url("http://www.apache.org/licenses/LICENSE-2.0")),
   homepage := Some(url("https://github.com/olafurpg/scalafmt")),
   autoAPIMappings := true,
   apiURL := Some(url("https://olafurpg.github.io/scalafmt/docs/")),
@@ -84,6 +94,13 @@ lazy val publishSettings = Seq(
     </developers>
 )
 
+lazy val credentialSettings = Seq(
+  credentials += Credentials("Sonatype Nexus Repository Manager",
+                             "oss.sonatype.org",
+                             "olafurpg@gmail.com",
+                             sonatypePassword)
+)
+
 lazy val noPublish = Seq(
   publish := {},
   publishLocal := {}
@@ -91,8 +108,8 @@ lazy val noPublish = Seq(
 
 lazy val allSettings = commonSettings ++ buildSettings ++ publishSettings
 
-
-lazy val root = project.in(file("."))
+lazy val root = project
+  .in(file("."))
   .settings(moduleName := "scalafmt")
   .settings(allSettings)
   .settings(noPublish)
@@ -103,13 +120,14 @@ lazy val root = project.in(file("."))
         |import org.scalafmt.internal._
         |import org.scalafmt._
       """.stripMargin
-  ).aggregate(core, cli, benchmarks, scalafmtSbt, macros, readme)
+  )
+  .aggregate(core, cli, benchmarks, scalafmtSbt, macros, readme, metaconfig)
   .dependsOn(core)
-
 
 lazy val core = project
   .settings(allSettings)
   .settings(
+    metaMacroSettings,
     moduleName := "scalafmt-core",
     test in assembly := {
       (test in Test).value
@@ -117,47 +135,66 @@ lazy val core = project
       (runMain in Test).toTask(" org.scalafmt.FormatExperimentApp").value
     },
     libraryDependencies ++= Seq(
-      "com.lihaoyi" %% "sourcecode" % "0.1.1",
-      "org.scalameta" %% "scalameta" % Deps.scalameta,
-
+      "com.lihaoyi"   %% "sourcecode" % "0.1.2",
+      "org.scalameta" %% "scalameta"  % Deps.scalameta,
+      "com.typesafe"     % "config" % "1.2.1",
       // Test dependencies
-      "org.scalariform" %% "scalariform" % Deps.scalariform ,
-      "org.scala-lang" % "scala-reflect" % scalaVersion.value % "test",
-      "org.scala-lang" % "scala-compiler" % scalaVersion.value % "test",
-      "ch.qos.logback" % "logback-classic" % "1.1.6" % "test",
-      "com.googlecode.java-diff-utils" % "diffutils" % "1.3.0" % "test",
-      "com.lihaoyi" %% "scalatags" % "0.5.4" % "test",
-      "org.apache.commons" % "commons-math3" % "3.6" % "test",
-      "org.scalatest" %% "scalatest" % Deps.scalatest % "test"
-    )
+      "org.scalariform"                %% "scalariform"    % Deps.scalariform,
+      "org.scala-lang"                 % "scala-reflect"   % scalaVersion.value % "test",
+      "org.scala-lang"                 % "scala-compiler"  % scalaVersion.value % "test",
+      "ch.qos.logback"                 % "logback-classic" % "1.1.6" % "test",
+      "com.googlecode.java-diff-utils" % "diffutils"       % "1.3.0" % "test",
+      "com.lihaoyi"                    %% "scalatags"      % "0.5.4" % "test",
+      "org.apache.commons"             % "commons-math3"   % "3.6" % "test",
+      "org.scalatest"                  %% "scalatest"      % Deps.scalatest % "test"
+    ),
+    addCompilerPlugin(
+      "org.scalamacros" % "paradise" % "2.1.0" cross CrossVersion.full)
   )
-
+  .dependsOn(metaconfig)
 
 lazy val macros = project
   .settings(allSettings)
-  .settings(noPublish)
   .settings(
     moduleName := "scalafmt-macros",
     libraryDependencies ++= Seq(
-      "org.scala-lang" % "scala-reflect" % scalaVersion.value,
+      "org.scala-lang" % "scala-reflect"  % scalaVersion.value,
       "org.scala-lang" % "scala-compiler" % scalaVersion.value
     )
   )
 
-lazy val cli = project
-    .settings(allSettings)
-    .settings(
-      moduleName := "scalafmt-cli",
-      mainClass in assembly := Some("org.scalafmt.cli.Cli"),
-      libraryDependencies ++= Seq(
-        "com.github.scopt" %% "scopt" % "3.3.0"
-      )
-    ).dependsOn(core % "compile->compile;test->test")
-    .dependsOn(macros)
+lazy val cliJvmOptions = Seq(
+  "-Xss4m"
+)
 
+lazy val cli = project
+  .settings(allSettings)
+  .settings(
+    packSettings,
+    packMain := Map("scalafmt_pack" -> "org.scalafmt.cli.Cli"),
+    packJvmOpts := Map(
+      "scalafmt_pack" -> cliJvmOptions
+    ),
+    moduleName := "scalafmt-cli",
+    mainClass in assembly := Some("org.scalafmt.cli.Cli"),
+    libraryDependencies ++= Seq(
+      "com.github.scopt" %% "scopt" % "3.3.0"
+    )
+  )
+  .dependsOn(core % "compile->compile;test->test")
+  .dependsOn(macros)
+
+lazy val scalafmtIntellij = project
+  .settings(
+    allSettings,
+    noPublish,
+    moduleName := "scalafmt-intellij"
+  )
+  .enablePlugins(SbtIdeaPlugin)
 
 lazy val scalafmtSbt = project
   .settings(allSettings)
+  .settings(ScriptedPlugin.scriptedSettings)
   .settings(
     coverageHighlighting := false,
     sbtPlugin := true,
@@ -165,7 +202,15 @@ lazy val scalafmtSbt = project
     // In convention of sbt plugins, the module is sbt-scalafmt instead of scalafmt-sbt.
     moduleName := "sbt-scalafmt",
     sources in Compile +=
-      baseDirectory.value / "../core/src/main/scala/org/scalafmt/Versions.scala"
+      baseDirectory.value / "../core/src/main/scala/org/scalafmt/Versions.scala",
+    scriptedLaunchOpts := Seq(
+      "-Dplugin.version=" + version.value,
+      // .jvmopts is ignored, simulate here
+      "-XX:MaxPermSize=256m",
+      "-Xmx2g",
+      "-Xss2m"
+    ),
+    scriptedBufferLog := false
   )
 
 lazy val benchmarks = project
@@ -175,7 +220,7 @@ lazy val benchmarks = project
   .settings(
     libraryDependencies ++= Seq(
       "org.scalariform" %% "scalariform" % Deps.scalariform,
-      "org.scalatest" %% "scalatest" % Deps.scalatest % "test"
+      "org.scalatest"   %% "scalatest"   % Deps.scalatest % "test"
     ),
     javaOptions in run ++= Seq(
       "-Djava.net.preferIPv4Stack=true",
@@ -195,23 +240,35 @@ lazy val benchmarks = project
       "-Xmx2G",
       "-server"
     )
-  ).dependsOn(core % "compile->test")
+  )
+  .dependsOn(core % "compile->test")
   .enablePlugins(JmhPlugin)
 
-lazy val readme = scalatex.ScalatexReadme(
-  projectId = "readme",
-  wd = file(""),
-  url = "https://github.com/olafurpg/scalafmt/tree/master",
-  source = "Readme")
-    .settings(allSettings)
-    .settings(noPublish)
-    .dependsOn(core)
-    .dependsOn(cli)
-    .dependsOn(macros)
-    .settings(
-      libraryDependencies ++= Seq(
-        "com.twitter" %% "util-eval" % "6.34.0"
-      ),
-      dependencyOverrides += "com.lihaoyi" %% "scalaparse" % "0.3.1"
-    )
+lazy val readme = scalatex
+  .ScalatexReadme(projectId = "readme",
+                  wd = file(""),
+                  url = "https://github.com/olafurpg/scalafmt/tree/master",
+                  source = "Readme")
+  .settings(allSettings)
+  .settings(noPublish)
+  .dependsOn(core)
+  .dependsOn(cli)
+  .dependsOn(macros)
+  .settings(
+    libraryDependencies ++= Seq(
+      "com.twitter" %% "util-eval" % "6.34.0"
+    ),
+    dependencyOverrides += "com.lihaoyi" %% "scalaparse" % "0.3.1"
+  )
 
+lazy val sonatypePassword = sys.env.getOrElse("SONATYPE_PW", "")
+
+lazy val metaconfig = project.settings(
+  allSettings,
+  metaMacroSettings,
+  publishSettings,
+  moduleName := "metaconfig",
+  libraryDependencies ++= Seq(
+    "org.scalatest" %% "scalatest" % Deps.scalatest % "test"
+  )
+)
